Fix asset loading by using inline styles
- Removed CSS import from App.jsx to avoid asset loading issues
- Added all styles as inline React styles
- Added Google Fonts link to index.html for Press Start 2P font
- Now fully functional without external CSS/JS assets
- Should eliminate all 404 errors for missing assets

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="theme-color" content="#ff6b6b" />
     <meta name="description" content="Sevgilinizle eğlenceli tuvalet takip uygulaması" />
     <title>Poop Count - Sevgililer Takibi</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
